# ProjectX2020

./: .gitignore  .pylintrc  README.md  eval.py  extrapolate.py  extrapolate_whole.py  gen_sbatch.py  pyproject.toml  sbatch_eval.py  sbatch_train.py  test.py  test_in.py  train.py  train_old.py
baseline/: eval_lstm.py  eval_rnn.py  hyperparams.py  lstm.py  lstm_state_dict.pt  lstm_utils.py  rnn.py  sbatch_baseline.py  test_baseline.py  train_baseline.py  train_lstm.py  train_rnn.py  utils.py
baseline_model/: lstm.py  rnn.py  train_lstm.py
data/: -83.812_10.39_rand_test.csv  -83.812_10.39_rand_valid.csv  -83.812_10.39_test.csv  -83.812_10.39_train.csv  -83.812_10.39_valid.csv  109.688_21.6224_rand_test.csv  109.688_21.6224_rand_valid.csv  109.688_21.6224_test.csv  109.688_21.6224_train.csv  109.688_21.6224_valid.csv  113.625_23.3073_rand_test.csv  113.625_23.3073_rand_valid.csv  113.625_23.3073_test.csv  113.625_23.3073_train.csv  113.625_23.3073_valid.csv  126_7.5819_rand_test.csv  126_7.5819_rand_valid.csv  126_7.5819_test.csv  126_7.5819_train.csv  126_7.5819_valid.csv  73.125_18.8143_test.csv  73.125_18.8143_train.csv  73.125_18.8143_valid.csv  73.125_19.3759_test.csv  73.125_19.3759_train.csv  73.125_19.3759_valid.csv  78.1875_10.39_test.csv  78.1875_10.39_train.csv  78.1875_10.39_valid.csv  README.md
data/process_scripts/: JRA55.py  SPAM.ipynb  data_visual.R  gen_infect.R
mr_node/: data.py  hyperparams.py  utils.py
mr_node/model/: __init__.py  decoder.py  encoder.py  model.py  odefunc.py
projectx/: data.py  hyperparams.py
projectx/baseline_model/: rnn.py  (+6 more)
(+5 files in other folders)
