[tool.poetry]
name = "projectx2020"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torchdiffeq = "^0.1.1"
torch = "^1.7.0"
pandas = "^1.1.4"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
pylint = "^2.6.0"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
